fix file submission download button not showing
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@35282 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_assessments.scss
+++ b/src/main/resources/scss/_assessments.scss
@@ -1187,15 +1187,20 @@ body.dragging * {
 			}
 		}
 		&.good {
-			.button { display: none; }
-			.due {color: $primary-green;}
+			.button {
+				display: none;
+			}
+			.due {
+				color: $primary-green;
+			}
 			&::after {
-				@include sprite($icons,'assignment_ontime');
+				@include sprite($icons, 'assignment_ontime');
 			}
-			a.active.button {
-				display: block;
-				text-decoration: none;
-			}
+		}
+
+		a.active.button {
+			display: block;
+			text-decoration: none;
 		}
 
 		&.hide-buttons {
